--- a/docs/modules/usage_guide/nav.adoc
+++ b/docs/modules/usage_guide/nav.adoc
@@ -1,7 +1,6 @@
-* xref:setup.adoc[]
-** xref:security.adoc[]
-** xref:catalogs.adoc[]
-** xref:cluster.adoc[]
-** xref:configuration.adoc[]
-** xref:monitoring.adoc[]
-** xref:query.adoc[]
+* xref:security.adoc[]
+* xref:catalogs.adoc[]
+* xref:cluster.adoc[]
+* xref:configuration.adoc[]
+* xref:monitoring.adoc[]
+* xref:query.adoc[]
