suggested change from review

--- a/docs/modules/ROOT/pages/concepts.adoc
+++ b/docs/modules/ROOT/pages/concepts.adoc
@@ -22,11 +22,6 @@ Currently, the following connectors are supported:
 
 == Catalog references
 
-Within the Stackable a `TrinoCatalog` consists of the following:
-
-- a mandatory reference to a Hive metastore configuration map (in the same namespace)
-- optional references to S3 and/or HDFS storage
-
-A catalog should be re-usable within multiple Trino clusters. Catalogs are referenced by Trino clusters with labels and label selectors: this is consistent with the Kubernetes paradigm and keeps the definitions simple and flexible.
+Within Stackable a `TrinoCatalog` consists of one or more (mandatory or optional) components which are specific to that catalog. A catalog should be re-usable within multiple Trino clusters. Catalogs are referenced by Trino clusters with labels and label selectors: this is consistent with the Kubernetes paradigm and keeps the definitions simple and flexible.
 
 A complete example of this is shown here: xref:usage_guide:catalogs.adoc[].
