added index to usage guide

--- a/docs/modules/usage_guide/nav.adoc
+++ b/docs/modules/usage_guide/nav.adoc
@@ -1,6 +1,7 @@
-* xref:security.adoc[]
-* xref:catalogs.adoc[]
-* xref:cluster.adoc[]
-* xref:configuration.adoc[]
-* xref:monitoring.adoc[]
-* xref:query.adoc[]
+* xref:index.adoc[]
+** xref:security.adoc[]
+** xref:catalogs.adoc[]
+** xref:cluster.adoc[]
+** xref:configuration.adoc[]
+** xref:monitoring.adoc[]
+** xref:query.adoc[]
