renamed ldap in enum

--- a/docs/modules/usage_guide/pages/security.adoc
+++ b/docs/modules/usage_guide/pages/security.adoc
@@ -115,7 +115,8 @@ spec:
   config:
   authentication:
     method:
-     authenticationClass: ldap-with-tls
+     ldap:
+       authenticationClass: ldap-with-tls
   coordinators:
     roleGroups:
       default:
