--- a/docs/modules/usage_guide/pages/security.adoc
+++ b/docs/modules/usage_guide/pages/security.adoc
@@ -2,56 +2,22 @@
 
 == Authentication
 
-Trino supports several https://trino.io/docs/current/security/authentication-types.html[authentication methods].
+Trino supports several https://trino.io/docs/current/security/authentication-types.html[authentication types].
 
 === Password
 
-The Trino operator currently supports the following `PASSWORD` https://trino.io/docs/current/security/password-file.html[authentication types].
+The Trino operator currently supports the following `PASSWORD` authenticators.
 
-==== File
+==== Password file
 
-The file based authentication can be defined as follows:vec
+The https://trino.io/docs/current/security/password-file.html[file based authentication] can be defined as follows:
 
 [source,yaml]
 ----
----
-apiVersion: trino.stackable.tech/v1alpha1
-kind: TrinoCluster
-metadata:
-  name: simple-trino
-spec:
-  version: 396-stackable0.1.0
-  catalogLabelSelector: {}
-  authentication:
-    method:
-      multiUser:
-        userCredentialsSecret:
-          namespace: default
-          name: simple-trino-users-secret
-  coordinators:
-    roleGroups:
-      default:
-        replicas: 1
-  workers:
-    roleGroups:
-      default:
-        replicas: 1
+include::example$code/trino-file-authentication.yaml[]
 ----
 
 The `simple-trino-users-secret` points to a manually created secret. This contains username and password pairs as shown in the following snippet:
-
-[source,yaml]
-----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: simple-trino-users-secret
-type: kubernetes.io/opaque
-stringData:
-  admin: $2y$10$89xReovvDLacVzRGpjOyAOONnayOgDAyIS2nW9bs5DJT98q17Dy5i
-  alice: $2y$10$HcCa4k9v2DRrD/g7e5vEz.Bk.1xg00YTEHOZjPX7oK3KqMSt2xT8W
-  bob: $2y$10$xVRXtYZnYuQu66SmruijPO8WHFM/UK5QPHTr.Nzf4JMcZSqt3W.2.
-----
 
 The username and password combinations are provided in the `stringData` field. The hashes are created using bcrypt with 10 rounds.
 
@@ -66,65 +32,7 @@ The Trino operator supports https://trino.io/docs/current/security/ldap.html[LDA
 
 [source,yaml]
 ----
----
-apiVersion: authentication.stackable.tech/v1alpha1
-kind: AuthenticationClass
-metadata:
-  name: ldap-with-tls
-spec:
-  provider:
-    ldap:
-      hostname: openldap.default.svc.cluster.local
-      searchBase: ou=users,dc=example,dc=org
-      bindCredentials:
-        secretClass: trino-with-ldap-bind
-      port: 1636
-      tls:
-        verification:
-          server:
-            caCert:
-              secretClass: openldap-tls
----
-apiVersion: secrets.stackable.tech/v1alpha1
-kind: SecretClass
-metadata:
-  name: trino-with-ldap-bind
-spec:
-  backend:
-    k8sSearch:
-      searchNamespace:
-        pod: {}
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: trino-with-ldap-bind
-  labels:
-    secrets.stackable.tech/class: trino-with-ldap-bind
-stringData:
-  LDAP_USER: cn=integrationtest,ou=users,dc=example,dc=org
-  LDAP_PASSWORD: integrationtest
----
-apiVersion: trino.stackable.tech/v1alpha1
-kind: TrinoCluster
-metadata:
-  name: simple-trino
-spec:
-  version: 396-stackable0.1.0
-  catalogLabelSelector: {}
-  config:
-  authentication:
-    method:
-      ldap:
-        authenticationClass: ldap-with-tls
-  coordinators:
-    roleGroups:
-      default:
-        replicas: 1
-  workers:
-    roleGroups:
-      default:
-        replicas: 1
+include::example$code/trino-ldap-authentication.yaml[]
 ----
 
 With this configuration, Trino will authenticate via `ldaps://openldap.default.svc.cluster.local:1636`.
@@ -138,27 +46,7 @@ In order to authorize Trino via OPA, a `ConfigMap` containing Rego rules for Tri
 
 [source,yaml]
 ----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: opa-bundle-trino
-  labels:
-    opa.stackable.tech/bundle: "trino"
-data:
-  trino.rego: |
-    package trino
-
-    import future.keywords.in
-
-    default allow = false
-
-    allow {
-      is_admin
-    }
-
-    is_admin() {
-      input.context.identity.user == "admin"
-    }
+include::example$code/opa-bundle-trino-cm.yaml[]
 ----
 
 Users should write their own rego rules for more complex OPA authorization.
