Refactored the catalogs documentation and created a separate page for each supported Trino connector.

--- a/docs/modules/usage_guide/nav.adoc
+++ b/docs/modules/usage_guide/nav.adoc
@@ -1,7 +1,11 @@
 * xref:index.adoc[]
 ** xref:cluster.adoc[]
-** xref:catalogs.adoc[]
 ** xref:configuration.adoc[]
 ** xref:security.adoc[]
 ** xref:monitoring.adoc[]
 ** xref:query.adoc[]
+** xref:catalogs/index.adoc[]
+*** xref:catalogs/hive.adoc[]
+*** xref:catalogs/iceberg.adoc[]
+*** xref:catalogs/tpcds.adoc[]
+*** xref:catalogs/tpch.adoc[]
