--- a/docs/modules/usage_guide/pages/catalogs/tpcds.adoc
+++ b/docs/modules/usage_guide/pages/catalogs/tpcds.adoc
@@ -2,7 +2,7 @@
 
 Trino provides connectors that provide a data source for the TCP-DS benchmark data set. This is not a stored data set and is instead a virtual data sets generated at query time using a deterministic algorithm.
 
-=== Example TPC-DS catalog configuration
+== Example TPC-DS catalog configuration
 [source,yaml]
 ----
 apiVersion: trino.stackable.tech/v1alpha1
