Add support for Google sheets connector (#337)
Closes https://github.com/stackabletech/trino-operator/issues/339

--- a/docs/modules/ROOT/pages/concepts.adoc
+++ b/docs/modules/ROOT/pages/concepts.adoc
@@ -15,6 +15,7 @@ There may exist two different catalogs called e.g. `warehouse_1` and `warehouse_
 
 Currently, the following connectors are supported:
 
+* https://trino.io/docs/current/connector/googlesheets.html[GoogleSheets]
 * https://trino.io/docs/current/connector/hive.html[Hive]
 * https://trino.io/docs/current/connector/iceberg.html[Iceberg]
 * https://trino.io/docs/current/connector/tpcds.html[TPCDS]
@@ -31,4 +32,4 @@ The following diagram illustrates this. Two Trino catalogs - each an instance of
 include::partial$diagrams/TrinoCatalogs.excalidraw[]
 ----
 
-A complete example of this is shown here: xref:usage_guide:catalogs.adoc[].
+A complete example of this is shown here: xref:usage_guide:catalogs/index.adoc[].
