Add support for Black Hole connector

--- a/docs/modules/usage_guide/pages/catalogs/google-sheets.adoc
+++ b/docs/modules/usage_guide/pages/catalogs/google-sheets.adoc
@@ -1,7 +1,7 @@
 = Google sheets
 
-Whith this connector Trino can connect to Google Sheets.
-It needs a serviceuser to access the Google APIs.
+With this connector Trino can connect to Google Sheets.
+It needs a service-user to access the Google APIs.
 Please consult the https://trino.io/docs/current/connector/googlesheets.html[official documentation] on how to use the Google Sheets connector.
 
 == Example Google sheets catalog configuration
