--- a/docs/modules/ROOT/pages/concepts.adoc
+++ b/docs/modules/ROOT/pages/concepts.adoc
@@ -15,11 +15,12 @@ There may exist two different catalogs called e.g. `warehouse_1` and `warehouse_
 
 Currently, the following connectors are supported:
 
-* https://trino.io/docs/current/connector/googlesheets.html[GoogleSheets]
+* https://trino.io/docs/current/connector/blackhole.html[Black hole]
+* https://trino.io/docs/current/connector/googlesheets.html[Google Sheets]
 * https://trino.io/docs/current/connector/hive.html[Hive]
 * https://trino.io/docs/current/connector/iceberg.html[Iceberg]
-* https://trino.io/docs/current/connector/tpcds.html[TPCDS]
-* https://trino.io/docs/current/connector/tpch.html[TPCH]
+* https://trino.io/docs/current/connector/tpcds.html[TPC-DS]
+* https://trino.io/docs/current/connector/tpch.html[TPC-H]
 
 == Catalog references
 
