--- a/docs/modules/usage_guide/nav.adoc
+++ b/docs/modules/usage_guide/nav.adoc
@@ -5,6 +5,7 @@
 ** xref:monitoring.adoc[]
 ** xref:query.adoc[]
 ** xref:catalogs/index.adoc[]
+*** xref:catalogs/black-hole.adoc[]
 *** xref:catalogs/google-sheets.adoc[]
 *** xref:catalogs/hive.adoc[]
 *** xref:catalogs/iceberg.adoc[]
