--- a/docs/modules/usage_guide/pages/catalogs/tpch.adoc
+++ b/docs/modules/usage_guide/pages/catalogs/tpch.adoc
@@ -1,7 +1,7 @@
 = TPC-H
 
 The https://trino.io/docs/current/connector/tpch.html[TPC-H connector] provides a data source for the TCP-H benchmark data set.
-This is not a stored data set and is instead a virtual data sets generated at query time using a deterministic algorithm.
+This is not a stored data set and is instead a virtual data set generated at query time using a deterministic algorithm.
 
 == Example TPC-H catalog configuration
 [source,yaml]
