Add support for Black Hole connector (#347)
# Description

## Review Checklist

- [x] Code contains useful comments
- [ ] CRD change approved (or not applicable)
- [ ] (Integration-)Test cases added (or not applicable)
- [x] Documentation added (or not applicable)
- [x] Changelog updated (or not applicable)
- [x] Cargo.toml only contains references to git tags (not specific commits or branches)
- [x] Helm chart can be installed and deployed operator works (or not applicable)

Once the review is done, comment `bors r+` (or `bors merge`) to merge. [Further information](https://bors.tech/documentation/getting-started/#reviewing-pull-requests)

--- a/docs/modules/usage_guide/pages/catalogs/tpch.adoc
+++ b/docs/modules/usage_guide/pages/catalogs/tpch.adoc
@@ -1,6 +1,7 @@
 = TPC-H
 
-Trino provides connectors that provide a data source for the TCP-H benchmark data set. This is not a stored data set and is instead a virtual data sets generated at query time using a deterministic algorithm.
+The https://trino.io/docs/current/connector/tpch.html[TPC-H connector] provides a data source for the TCP-H benchmark data set.
+This is not a stored data set and is instead a virtual data set generated at query time using a deterministic algorithm.
 
 == Example TPC-H catalog configuration
 [source,yaml]
@@ -15,6 +16,5 @@ metadata:
     trino: simple-trino
 spec:
   connector:
-    # Specify hive here when defining a hive catalog
-        tpch: {}
+    tpch: {} # No options needed
 ----
