Added operator requirements.

--- a/docs/modules/getting_started/pages/index.adoc
+++ b/docs/modules/getting_started/pages/index.adoc
@@ -11,6 +11,11 @@ You will need:
 * optional: Helm
 * optional: Trino CLI tool and curl (for testing)
 
+Resource sizing depends on cluster type(s), usage and scope, but as a starting point we recommend a minimum of the following resources for this operator:
+
+* 0.2 cores (e.g. i5 or similar)
+* 256MB RAM
+
 == What's next
 
 The guide is divided into the following steps:
