--- a/docs/modules/usage_guide/pages/catalogs/index.adoc
+++ b/docs/modules/usage_guide/pages/catalogs/index.adoc
@@ -69,7 +69,9 @@ kind: TrinoCluster
 metadata:
   name: simple-trino
 spec:
-  version: 396-stackable0.2.0
+  image:
+    productVersion: 396
+    stackableVersion: 0.2.0
   catalogLabelSelector:
     matchLabels:
       trino: simple-trino
